hphp/test/quick/interface_implements_interface.php.expectf
Fatal error: Interfaces may not implement other interfaces or classes in %s/interface_implements_interface.php on line 4
